# advent_of_code_2023

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  FRAMEWORK.md  README.md  get_completed_pages.py  init_day.py  pyproject.toml
aoc/: __init__.py  test_aoc.py
day01/: part1.py  part2.py  test_2.txt
day02/: part1.py  part2.py
day03/: part1.py  part2.py  test2.txt  test3.txt
day04/: part1.py  part2.py
day05/: part1.py  part2.py  test_2.txt
day06/: part1.py  part2.py
day07/: part1.py  part2.py  test_day07_part2.py  test_part1.py  test_part2.py
day08/: part1.py  part2.py  test_part1.py  test_part2.py
day09/: part1.py  part2.py  test_day09_part1.py  test_part1.py  test_part2.py
day10/: part1.py  part2.py  test_day10_part2.py  test_part1.py  test_part2.py
day11/: part1.py  part2.py  test_day11_part1.py  test_day11_part2.py  test_part1.py  test_part2.py
day12/: dp_part2.py  part1.py  part2.py  profile.txt  test_2.txt  test_3.txt  test_part1.py  test_part2.py
day13/: part1.py  part2.py  test_part1.py
day14/: part1.py  part2.py  test_part1.py  test_part2.py
day15/: part1.py  part2.py  test_part1.py  test_part2.py
day16/: part1.py  part2.py  test_part1.py  test_part2.py
day17/: part1.py  part2.py  test_part1.py  test_part2.py
day18/: part1.py  part2.py  test_part1.py  test_part2.py
day19/: part1.py  part2.py  test_part1.py  test_part2.py
day20/: part1.py  part2.py  test_part1.py  test_part2.py
day21/: part1.py  part2.py  scaleup.py  test_part1.py  test_part2.py
day22/: part1.py  part2.py  test_part1.py  test_part2.py
(+15 files in other folders)
