[tool.poetry]
name = "aoc-2023"
version = "0.0.1"
description = "Advent of Code 2023"
authors = ["Ian Glover <ian.glover@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
ipython = "^8.18.1"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
